--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.3.0-alpha.1",
     "react-dom": "^16.2.0",
     "react-native": "0.54.1",
+    "realm": "^2.2.15",
     "sinon": "^4.4.2"
   },
   "devDependencies": {
